--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: ProjectApriori
-Version: 0.1
+Version: 1.0
 Title: Implementaion of the Apriori Algorithm
 Description: In this package a full implementation of the Apriori-Algorithm in R is provided
 Author: Tim Toebrock <timtoebrock@gmail.com>
 Maintainer: Tim Toebrock<timtoebrock@gmail.com>
-Depends: R (>= 3.5.1)
-Imports: arules,
+Depends: R (>= 3.5.1),
+        arules (>= 1.6), 
+         Matrix (>= 1.2)
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.0.1
