fixed typo in 'makeTransActionMatrix' and updated corresponding filenames

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ export(FrequentItemsets)
 export(GenCandidates)
 export(GetSets)
 export(GiveUniqueCol)
+export(makeTransactionMatrix)
 import(Matrix)
 useDynLib(ProjectApriori,R_pnindex)
