--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,5 +7,8 @@ export(GenCandidates)
 export(GetSets)
 export(GiveUniqueCol)
 export(makeTransactionMatrix)
+exportClasses(FIMatrix)
+exportClasses(Rules)
+exportClasses(TAMatrix)
 import(Matrix)
 useDynLib(ProjectApriori,R_pnindex)
