--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,8 @@ export(FindFrequentItemsets)
 export(GenCandidates)
 export(GetSets)
 export(GiveUniqueCol)
-export(makeTransactionMatrix)
+export(makeFIMatrix)
+export(makeTAMatrix)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
