added roxygen2 documentation for new generics. new generics now load properly. fixed a bug in summary method for FAMatrix where it would count the number of itemsets instead of items.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,10 @@ export(FindFrequentItemsets)
 export(GenCandidates)
 export(GetSets)
 export(GiveUniqueCol)
+export(confidence)
+export(extract)
+export(leverage)
+export(lift)
 export(makeFIMatrix)
 export(makeTAMatrix)
 exportClasses(FIMatrix)
