Prune function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(leverage)
 export(lift)
 export(makeFIMatrix)
 export(makeTAMatrix)
+export(prune)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
