added qplot methods (dependent on ggplot2) support method now consistent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
 import(Matrix)
+import(ggplot2)
 useDynLib(ProjectApriori,R_pnindex)
