--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,9 +13,17 @@ export(lift)
 export(makeFIMatrix)
 export(makeTAMatrix)
 export(prune)
+export(support)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
+exportMethods(hist)
+exportMethods(length)
+exportMethods(plot)
+exportMethods(prune)
+exportMethods(show)
+exportMethods(summary)
+exportMethods(support)
 import(Matrix)
-import(ggplot2)
+import(methods)
 useDynLib(ProjectApriori,R_pnindex)
