Documentation for FIMatrix is finished

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,16 @@ export(support)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
+exportMethods("[")
+exportMethods(colSums)
 exportMethods(hist)
+exportMethods(items)
 exportMethods(length)
+exportMethods(ncol)
+exportMethods(nrow)
 exportMethods(plot)
 exportMethods(prune)
+exportMethods(rowSums)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(support)
