--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(GetSets)
 export(GiveUniqueCol)
 export(confidence)
 export(extract)
+export(items)
 export(leverage)
 export(lift)
 export(makeFIMatrix)
@@ -19,12 +20,17 @@ exportClasses(Rules)
 exportClasses(TAMatrix)
 exportMethods("[")
 exportMethods(colSums)
+exportMethods(confidence)
+exportMethods(extract)
 exportMethods(hist)
 exportMethods(items)
 exportMethods(length)
+exportMethods(leverage)
+exportMethods(lift)
 exportMethods(ncol)
 exportMethods(nrow)
 exportMethods(plot)
+exportMethods(print)
 exportMethods(prune)
 exportMethods(rowSums)
 exportMethods(show)
