--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,4 +38,10 @@ exportMethods(summary)
 exportMethods(support)
 import(Matrix)
 import(methods)
+importFrom(grDevices,as.raster)
+importFrom(grDevices,colorRampPalette)
+importFrom(graphics,layout)
+importFrom(graphics,rasterImage)
+importFrom(graphics,text)
+importFrom(utils,combn)
 useDynLib(ProjectApriori,R_pnindex)
