brackets replaced by select function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,11 +14,11 @@ export(lift)
 export(makeFIMatrix)
 export(makeTAMatrix)
 export(prune)
+export(select)
 export(support)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
-exportMethods("[")
 exportMethods(colSums)
 exportMethods(confidence)
 exportMethods(extract)
@@ -33,6 +33,7 @@ exportMethods(plot)
 exportMethods(print)
 exportMethods(prune)
 exportMethods(rowSums)
+exportMethods(select)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(support)
@@ -40,6 +41,7 @@ import(Matrix)
 import(methods)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,colorRampPalette)
+importFrom(graphics,axis)
 importFrom(graphics,layout)
 importFrom(graphics,rasterImage)
 importFrom(graphics,text)
