Calling makeTAMatrix should work now

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,13 +6,33 @@ export(FindFrequentItemsets)
 export(GenCandidates)
 export(GetSets)
 export(GiveUniqueCol)
+export(calcsupportFIMatrix)
 export(confidence)
 export(extract)
 export(items)
 export(leverage)
 export(lift)
 export(makeFIMatrix)
+export(makeFIMatrix.FIMatrix)
+export(makeFIMatrix.data.frame)
+export(makeFIMatrix.itemsets)
+export(makeFIMatrix.lgCMatrix)
+export(makeFIMatrix.lgTMatrix)
+export(makeFIMatrix.matrix)
+export(makeFIMatrix.ngCMatrix)
+export(makeFIMatrix.ngTMatrix)
+export(makeFIMatrix.transactions)
 export(makeTAMatrix)
+export(makeTAMatrix.TAMatrix)
+export(makeTAMatrix.data.frame)
+export(makeTAMatrix.default)
+export(makeTAMatrix.lgCMatrix)
+export(makeTAMatrix.lgTMatrix)
+export(makeTAMatrix.matrix)
+export(makeTAMatrix.ngCMatrix)
+export(makeTAMatrix.ngTMatrix)
+export(makeTAMatrix.transactions)
+export(outputTAMatrix)
 export(prune)
 export(select)
 export(support)
