qplot works with import of ggplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(makeTAMatrix.ngTMatrix)
 export(makeTAMatrix.transactions)
 export(outputTAMatrix)
 export(prune)
+export(qplot)
 export(select)
 export(support)
 exportClasses(FIMatrix)
@@ -52,12 +53,14 @@ exportMethods(nrow)
 exportMethods(plot)
 exportMethods(print)
 exportMethods(prune)
+exportMethods(qplot)
 exportMethods(rowSums)
 exportMethods(select)
 exportMethods(show)
 exportMethods(summary)
 exportMethods(support)
 import(Matrix)
+import(ggplot2)
 import(methods)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,colorRampPalette)
