--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,8 @@ Author: Tim Toebrock <timtoebrock@gmail.com>
 Maintainer: Tim Toebrock<timtoebrock@gmail.com>
 Depends: R (>= 3.4.0)
 Imports: Matrix (>= 1.2),
-        methods
+        methods,
+        ggplot2
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.1.0
