--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,8 +60,15 @@ exportMethods(show)
 exportMethods(summary)
 exportMethods(support)
 import(Matrix)
-import(ggplot2)
 import(methods)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_bar)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_gradient)
+importFrom(ggplot2,theme)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,axis)
@@ -69,4 +76,5 @@ importFrom(graphics,layout)
 importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(utils,combn)
+importFrom(utils,data)
 useDynLib(ProjectApriori,R_pnindex)
