Overwriting items and support function by arules fixed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,6 @@ export(GiveUniqueCol)
 export(calcsupportFIMatrix)
 export(confidence)
 export(extract)
-export(items)
 export(leverage)
 export(lift)
 export(makeFIMatrix)
@@ -36,7 +35,6 @@ export(outputTAMatrix)
 export(prune)
 export(qplot)
 export(select)
-export(support)
 exportClasses(FIMatrix)
 exportClasses(Rules)
 exportClasses(TAMatrix)
@@ -61,6 +59,8 @@ exportMethods(summary)
 exportMethods(support)
 import(Matrix)
 import(methods)
+importFrom(arules,items)
+importFrom(arules,support)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_text)
 importFrom(ggplot2,geom_bar)
