--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Maintainer: Tim Toebrock<timtoebrock@gmail.com>
 Depends: R (>= 3.4.0)
 Imports: Matrix (>= 1.2),
         methods,
+        arules,
         ggplot2
 License: GPL-3
 LazyData: true
