--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,4 +77,4 @@ importFrom(graphics,rasterImage)
 importFrom(graphics,text)
 importFrom(utils,combn)
 importFrom(utils,data)
-useDynLib(ProjectApriori,R_pnindex)
+useDynLib(Rpriori,R_pnindex)
