Cleaner version with helper functions file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,16 +16,10 @@ Suggests: testthat
 Collate: 
     'AssociationRules.R'
     'CoerceTypes.R'
-    'CombineCands.R'
-    'DetRules.R'
     'DetSupport.R'
-    'Duplicate.R'
-    'ExtractFrequentSets.R'
-    'ExtractRules.R'
-    'FrequentItemsets.R'
+    'FindFrequentItemsets.R'
     'GenCandidates.R'
-    'GetSets.R'
-    'GiveUniqueCol.R'
+    'HelperFunctions.R'
     'allClasses.R'
     'allMethods.R'
     'data.R'
