--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,6 +68,7 @@ importFrom(ggplot2,ggplot)
 importFrom(ggplot2,labs)
 importFrom(ggplot2,scale_color_gradient)
 importFrom(ggplot2,theme)
+importFrom(ggplot2, scale_x_continuous)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,colorRampPalette)
 importFrom(graphics,axis)
