--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,15 @@
 Package: Rpriori
-Version: 1.1
-Title: Implementaion of the Apriori Algorithm
-Description: This packages includes a full implementation of the Apriori algorithm. It does include a compete S4 class structure as well as many convenience functions such as print or plot. 
-Author: Tim Toebrock <timtoebrock@gmail.com>
+Version: 0.9
+Title: Implementation of the Apriori Algorithm
+Description: This packages includes a full implementation of the Apriori algorithm. It does include a S4 class structure as well as many convenience functions such as print, plot or summary. 
+Author: Tim Toebrock <timtoebrock@gmail.com>,
+      Andreas Buchmueller <abuchmueller@gmail.com>
 Maintainer: Tim Toebrock<timtoebrock@gmail.com>
 Depends: R (>= 3.4.0)
 Imports: Matrix (>= 1.2),
         methods,
-        arules,
-        ggplot2
+        arules(>= 1.5-0),
+        ggplot2(>= 2.3.0)
 License: GPL-3
 LazyData: true
 RoxygenNote: 6.1.0
